<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.drulabs.localdash.HomeScreen">

    <EditText
        android:id="@+id/et_home_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_bigger"
        android:ems="10"
        android:hint="@string/enter_name_hint"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/btn_home_nsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_home_player_name"
        android:layout_marginTop="@dimen/margin_big"
        android:onClick="startNSD"
        android:text="@string/txt_nsd"/>

    <Button
        android:id="@+id/btn_home_wifi_direct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_home_nsd"
        android:layout_marginTop="@dimen/margin_big"
        android:onClick="startWiFiDirect"
        android:text="@string/txt_wifi_direct"/>

    <Button
        android:id="@+id/btn_home_wifisd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_home_wifi_direct"
        android:layout_marginTop="@dimen/margin_big"
        android:onClick="startWiFiDirectServiceDiscovery"
        android:text="@string/txt_wifi_sd"/>

    <TextView
        android:id="@+id/tv_port_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_home_wifisd"
        android:layout_marginTop="@dimen/margin_big"
        android:gravity="center"
        android:hint="@string/port_info_hint"
        android:textSize="20sp"/>
</RelativeLayout>
